--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.24.1",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.5",
+    "ms": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -24,6 +25,7 @@
     "react-intersection-observer": "^9.8.1"
   },
   "devDependencies": {
+    "@types/ms": "^0.7.34",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
